--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">application</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Real-world uses of facial recognition technology..</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
+                        <!-- Example 1: Mobile Devices-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                                 <div class="portfolio-hover">
