Change title and update portfolio item details
Updated the title and portfolio section to reflect mobile authentication.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Agency - Start Final Project</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -101,8 +101,9 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Mobile Authentication</div>
+                                <div class="portfolio-caption-subheading text-muted">Smartphones & Tablets</div>
+                                <p class="text-muted">Facial recognition is widely used to unlock phones and tablets. For example, Apple’s Face ID scans users’ faces and compares them to stored data to grant access quickly and securely. This use shows how the technology can enhance convenience while protecting personal data.</p>
                             </div>
                         </div>
                     </div>
