--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
+                        <!--Example 2: Airports-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                                 <div class="portfolio-hover">
@@ -117,13 +117,14 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">>Air Travel Security</div>
+                                <div class="portfolio-caption-subheading text-muted">Airports & Border Controln</div>
+                                 <p class="text-muted">Airports have adopted facial recognition at security checkpoints. Boarding times dropped by up to 40%, and identity verification averaged 2 seconds. Creating safer and easier ways to travel!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
+                        <!-- Finding Missing People-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                                 <div class="portfolio-hover">
@@ -132,8 +133,9 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Law Enforcement</div>
+                                <div class="portfolio-caption-subheading text-muted">Finding Missing People</div>
+                                <p class="text-muted">Facial recognition helps police locate missing persons in large crowds. In India, it helped find over 3,000 missing children in just 4 days by scanning security cameras. This demonstrates how technology can assist critical safety efforts.</p
                             </div>
                         </div>
                     </div>
@@ -349,10 +351,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Mobile Authentication</h2>
+                                    <p class="item-intro text-muted">How Face ID stores and uses your data.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Face ID raises concerns because users worry about how their face data is stored and whether it leaves their device. To address this, phones store only an encrypted version of your face inside the Secure Enclave, a protected part of the phone that apps and companies can’t touch. The data never leaves your device, which helps keep your biometric information private and locked down.!</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
