Update portfolio images and text in index.html

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/airport.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">>Air Travel Security</div>
+                                <div class="portfolio-caption-heading">Air Travel Security</div>
                                 <div class="portfolio-caption-subheading text-muted">Airports & Border Controln</div>
-                                 <p class="text-muted">Airports have adopted facial recognition at security checkpoints. Boarding times dropped by up to 40%, and identity verification averaged 2 seconds. Creating safer and easier ways to travel!</p>
+                                 <p class="text-muted">Airports have adopted facial recognition at security checkpoints. Boarding times dropped by up to 40%, and identity verification averaged 2 seconds.Creating safer and easier ways to travel!</p>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/law.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Law Enforcement</div>
@@ -353,21 +353,12 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Mobile Authentication</h2>
                                     <p class="item-intro text-muted">How Face ID stores and uses your data.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/auth.gif" alt="..." />
                                     <p>Face ID raises concerns because users worry about how their face data is stored and whether it leaves their device. To address this, phones store only an encrypted version of your face inside the Secure Enclave, a protected part of the phone that apps and companies can’t touch. The data never leaves your device, which helps keep your biometric information private and locked down.!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Illustration
-                                        </li>
-                                    </ul>
+                            
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Close
                                     </button>
                                 </div>
                             </div>
