--- a/index.html
+++ b/index.html
@@ -199,20 +199,25 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>STAKEHOLDERS&nbsp;</h4>
+                                <h4 class="subheading">WHO&nbsp;&nbsp;</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">LAW ENFORCEMENT AND GOVERNMENT AGENCIES.<br>
+                              PRIVATE CITIZENS &amp; GENERAL PUBLIC&nbsp; <br>
+                              DATA BROKERS/TECHNOLOGY COMPANIES<br>
+                              DATA PRIVACY ADVOCACY GROUPS &amp; LEGAL&nbsp;</p>
+                            </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>Consent and Data Privacy</h4>
+                                <h4 class="subheading">Social Implications</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Individuals rarely have meaningful ability to opt out, Face data is collected without explicit permission, data is stored and often sold off to the highest bidder. Systems deployed for purpose (security) often overreach and expand to other areas. (Marketing, social media, Law enforcement).</p>
+                            </div>
                         </div>
                     </li>
                     <li>
