--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </section>
-        !-- About-->
+        <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
