--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Air Travel Security</div>
-                                <div class="portfolio-caption-subheading text-muted">Airports & Border Controln</div>
+                                <div class="portfolio-caption-subheading text-muted">Airports & Border Control</div>
                                  <p class="text-muted">Airports have adopted facial recognition at security checkpoints. Boarding times dropped by up to 40%, and identity verification averaged 2 seconds.Creating safer and easier ways to travel!</p>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/law.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/law.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Law Enforcement</div>
@@ -332,7 +332,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; 2025 </div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -384,7 +384,7 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Airport Travel Security</h2>
                                     <p class="item-intro text-muted">Ensuring Accuracy</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/air.jpg" alt="..." />
                                     <p>Airports use facial recognition to speed up check-ins and boarding, but one major concern is bias: some systems are more likely to misidentify travelers based on skin tone, age, or gender, which could cause delays or unfair treatment.
 To address this, modern airport systems are trained on diverse datasets that include people of all races, ages, and genders.</p>
                                 
@@ -411,7 +411,7 @@ To address this, modern airport systems are trained on diverse datasets that inc
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Law Enforcement</h2>
                                     <p class="item-intro text-muted">Balancing Safety and Consent</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/law1.jpeg" alt="..." />
                                     <p>Facial recognition can help law enforcement identify individuals quickly, but it raises concerns about constant surveillance without consent or knowledge. To address this, some agencies are implementing strict rules about when and how the technology can be used</p>
                                     
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
