--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Mobile Authentication</div>
                                 <div class="portfolio-caption-subheading text-muted">Smartphones & Tablets</div>
-                                <p class="text-muted">Facial recognition is widely used to unlock phones and tablets. For example, Apple’s Face ID scans users’ faces and compares them to stored data to grant access quickly and securely. This use shows how the technology can enhance convenience while protecting personal data.</p>
+                                <p class="text-muted">Facial recognition is widely used on a variety of mobile devices to help unlock the device itself, authenticate logins, and verify payments. For example, Apple’s Face ID used daily, scans users’ faces and compares them to stored data to grant access quickly and securely. This use shows how the technology can enhance convenience while protecting personal data.</p>
                             </div>
                         </div>
                     </div>
@@ -140,47 +140,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Portfolio item 6-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+            
                             </div>
                         </div>
                     </div>
@@ -359,7 +319,9 @@
                                     <h2 class="text-uppercase">Mobile Authentication</h2>
                                     <p class="item-intro text-muted">How Face ID stores and uses your data.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/auth.gif" alt="..." />
-                                    <p>Face ID raises concerns because users worry about how their face data is stored and whether it leaves their device. To address this, phones store only an encrypted version of your face inside the Secure Enclave, a protected part of the phone that apps and companies can’t touch. The data never leaves your device, which helps keep your biometric information private and locked down.!</p>
+                                    <p>Face ID raises several concerns because users worry about how their face data is stored and whether it leaves their devices, though measures are in place to help ease these concerns. For example, Apple addresses this by clarifying that the devices store only an encrypted version of your face in the Secure Enclave, a protected part of the phone that apps and companies can’t access. The data never leaves your device, helping keep your biometric information private and secure. There are also shared concerns about the possible facial spoofing when using Face ID. Apple defends against this with the TrueDepth camera system, which uses advanced technology to ensure its ability to authenticate your true face. 
+
+ ( !</p>
                             
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
