--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">discussion&nbsp;</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Implications of the Applications</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -230,7 +230,7 @@ CONS: Collecting biometric data treats individuals as an object instead of human
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">recommendations</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">How can we make it better</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
